# Parish

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  fly.toml  justfile  parish.example.toml
.Jules/: palette.md
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: labeler.yml  pull_request_template.md
.jules/: bolt.md
data/: athlone.json  dublin.json  parish.json  roscommon.json
parish/: Cargo.toml  THIRD_PARTY_NOTICES.rust.md  justfile  parish.example.toml
parish/.cargo/: audit.toml
parish/apps/ui/: TODO.md  package-lock.json  package.json  tsconfig.e2e.json  tsconfig.json  vite.config.ts
parish/apps/ui/__mocks__/: maplibre-gl.ts
parish/apps/ui/e2e/: fixtures.ts  mock-data.ts  screenshots.spec.ts  smoke.spec.ts
parish/apps/ui/src/: app.css  app.html
parish/apps/ui/src/components/: AuthStatus.svelte  AuthStatus.test.ts  ChatPanel.svelte  ChatPanel.test.ts  DebugPanel.svelte  DemoBanner.svelte  DemoBanner.test.ts  DemoPanel.svelte  DemoPanel.test.ts  FullMapOverlay.svelte  FullMapOverlay.test.ts  InputField.svelte  InputField.test.ts  MapPanel.svelte  MapPanel.test.ts  MoodIcon.svelte  SavePicker.svelte  SetupOverlay.svelte  SetupOverlay.test.ts  Sidebar.svelte  Sidebar.test.ts
parish/apps/ui/src/components/editor/: LocationDetail.svelte  LocationList.svelte  ModBrowser.svelte  NpcDetail.svelte  NpcList.svelte  SaveInspector.svelte  ValidatorPanel.svelte
parish/apps/ui/src/lib/: demo-player.test.ts  demo-player.ts  editor-ipc.ts  ipc.ts  map-icons.test.ts  reactions.test.ts  setupWaitMessages.ts  slash-commands.test.ts  stream-pacing.ts  theme.test.ts  types.ts  webgpu-provider.ts
parish/apps/ui/src/lib/map/: controller.ts  style.test.ts  style.ts
parish/apps/ui/src/routes/: +page.svelte
parish/apps/ui/src/routes/editor/: +page.svelte
parish/apps/ui/src/stores/: debug.ts  demo.ts  game.test.ts  game.ts  tiles.test.ts  travel.test.ts  travel.ts
parish/crates/parish-cli/: Cargo.toml  TODO.md
parish/crates/parish-cli/src/: app.rs  command_host.rs  config.rs  debug.rs  emitter.rs  headless.rs  lib.rs  main.rs  testing.rs
parish/crates/parish-cli/tests/: eval_baselines.rs  game_harness_integration.rs  headless_script_tests.rs  world_graph_integration.rs
parish/crates/parish-config/: Cargo.toml  README.md  TODO.md
parish/crates/parish-config/src/: engine.rs  lib.rs  presets.rs  provider.rs
parish/crates/parish-core/: Cargo.toml  TODO.md
parish/crates/parish-core/prompts/: npc_tier1.prompt.yml
parish/crates/parish-core/src/: debug_snapshot.rs  event_bus.rs  game_mod.rs  game_session.rs  identity.rs  lib.rs  loading.rs  mod_source.rs  session_store.rs  tile_cache.rs
parish/crates/parish-core/src/editor/: maintenance_tool.rs  mod_io.rs  persist.rs  validate.rs
parish/crates/parish-core/src/game_loop/: context.rs  inference.rs  input.rs  mod.rs  movement.rs  npc_turn.rs  reactions.rs  save.rs  system_command.rs
parish/crates/parish-core/src/ipc/: commands.rs  config.rs  editor.rs  event_emitter.rs  handlers.rs  mod.rs  state.rs  types.rs
parish/crates/parish-core/src/prompts/: mod.rs
parish/crates/parish-core/tests/: async_llm_integration.rs
parish/crates/parish-geo-tool/: Cargo.toml  TODO.md
parish/crates/parish-geo-tool/src/: cache.rs  connections.rs  descriptions.rs  extract.rs  lod.rs  main.rs  merge.rs  output.rs  pipeline.rs  test_utils.rs  world_file_shared.inc
parish/crates/parish-geo-tool/src/historic/: discover.rs
parish/crates/parish-inference/: Cargo.toml  TODO.md
parish/crates/parish-inference/src/: anthropic_client.rs  client.rs  inference_client.rs  lib.rs  openai_client.rs  setup.rs  utf8_stream.rs  webgpu_client.rs
parish/crates/parish-inference/tests/: http_mock_tests.rs
parish/crates/parish-input/: Cargo.toml  TODO.md
parish/crates/parish-input/src/: commands.rs  intent_local.rs  lib.rs  mention.rs  parser.rs
parish/crates/parish-npc/: Cargo.toml  TODO.md
parish/crates/parish-npc-tool/: Cargo.toml  TODO.md
parish/crates/parish-npc-tool/src/: main.rs
parish/crates/parish-npc/src/: autonomous.rs  banshee.rs  data.rs  familiarity.rs  lib.rs  manager.rs  memory.rs  pilgrimage.rs  reactions.rs  schedule.rs  schedule_resolver.rs  ticks.rs  tier4.rs  tier_assign.rs  tier_assigner.rs  transitions.rs  types.rs
parish/crates/parish-npc/tests/: gossip_integration.rs  tier2_llm_integration.rs
parish/crates/parish-palette/: Cargo.toml  TODO.md
parish/crates/parish-palette/src/: lib.rs
parish/crates/parish-persistence/: Cargo.toml  README.md  TODO.md
parish/crates/parish-persistence/src/: database.rs  journal.rs  journal_bridge.rs  lib.rs  picker.rs  snapshot.rs
parish/crates/parish-server/: Cargo.toml  TODO.md
parish/crates/parish-server/src/: auth.rs  cf_auth.rs  command_host.rs  editor_routes.rs  emitter.rs  lib.rs  middleware.rs  route_registry.rs  routes.rs  session.rs  session_store_impl.rs  state.rs  tile_routes.rs  tracing_setup.rs  ws.rs
parish/crates/parish-server/tests/: account_id.rs  admission_control.rs  isolation.rs  new_game_parity.rs  security_headers.rs
parish/crates/parish-tauri/: Cargo.toml  README.md  TODO.md  tauri.conf.json
parish/crates/parish-tauri/src/: command_host.rs  command_registry.rs  commands.rs  events.rs  lib.rs
parish/crates/parish-tauri/tests/: command_logic.rs  command_registry.rs
parish/crates/parish-types/: Cargo.toml  README.md  TODO.md
parish/crates/parish-types/src/: emotion.rs  emotion_leaves.rs  error.rs  events.rs  gossip.rs  ids.rs  lib.rs  time.rs
parish/crates/parish-world/: Cargo.toml  README.md  TODO.md
parish/crates/parish-world/src/: encounter.rs  graph.rs  letters.rs  lib.rs  movement.rs  wayfarers.rs  weather.rs
parish/scripts/: agent-check.sh  check-doc-paths.sh  harness-audit.sh  project_stats.py
parish/testing/evals/baselines/: test_walkthrough.json
parish/testing/fixtures/: blow_in_arc_playtest.txt  pilgrimage_flag_off.txt  pilgrimage_playtest.txt  play_prove_emotions.txt  play_prove_language.txt
src/: app.rs  (+8 more)
(+532 files in other folders)
