[package]
name = "parish"
version = "0.1.0"
edition = "2024"
description = "An Irish Living World Text Adventure — CLI / headless / web entry point"
license = "GPL-3.0-only"
publish = false
default-run = "parish"

[[bin]]
name = "parish"
path = "src/main.rs"

[dependencies]
parish-core    = { workspace = true }
parish-server  = { path = "../parish-server" }
tokio              = { workspace = true }
clap               = { workspace = true, features = ["env"] }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = { workspace = true }
chrono             = { workspace = true }
toml               = { workspace = true }
dotenvy            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
reqwest            = { workspace = true }
rusqlite           = { workspace = true }
strsim             = { workspace = true }
rand               = { workspace = true }

[dev-dependencies]
tokio-test   = { workspace = true }
tempfile     = { workspace = true }
parish-types = { workspace = true }
serial_test  = { workspace = true }
