[package]
name = "parish-config"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "Engine and LLM-provider configuration loader for the Parish engine"

[dependencies]
parish-types = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
serial_test = { workspace = true }
