[package]
name = "parish-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "Orchestration layer for the Parish engine: game session, IPC, mod loading, prompts"

[dependencies]
parish-types      = { workspace = true }
parish-config     = { workspace = true }
parish-inference  = { workspace = true }
parish-world      = { workspace = true }
parish-palette    = { workspace = true }
parish-npc        = { workspace = true }
parish-persistence = { workspace = true }
parish-input      = { workspace = true }
tokio             = { workspace = true }
tokio-util        = { workspace = true }
reqwest           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
serde_yaml        = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
chrono            = { workspace = true }
toml              = { workspace = true }
regex             = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile   = { workspace = true }
wiremock   = { workspace = true }
regex      = { workspace = true }
