[package]
name = "parish-geo-tool"
version = "0.1.0"
edition = "2024"
description = "Download OSM data and convert to Parish world graph format"
license = "GPL-3.0-only"
publish = false

[[bin]]
name = "parish-geo-tool"
path = "src/main.rs"

[dependencies]
parish-core        = { workspace = true }
tokio              = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
reqwest            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
chrono             = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
