[package]
name = "parish-inference"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "LLM inference queue and provider clients (OpenAI/Anthropic/simulator) for Parish"

[dependencies]
parish-types  = { workspace = true }
parish-config = { workspace = true }
reqwest       = { workspace = true, features = ["json", "stream"] }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }

tracing       = { workspace = true }
chrono        = { workspace = true }
governor      = { workspace = true }
lru           = { workspace = true }
uuid          = { workspace = true }
async-trait   = { workspace = true }

[features]
default = ["inference-client-trait", "inference-response-cache"]
inference-client-trait = []
inference-response-cache = []

[dev-dependencies]
wiremock           = { workspace = true }
tracing-subscriber = { workspace = true }
