[package]
name = "parish-input"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "Player input parsing and command interpretation for the Parish engine"

[dependencies]
parish-types     = { workspace = true }
parish-config    = { workspace = true }
parish-inference = { workspace = true }
serde            = { workspace = true }
anyhow           = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
wiremock   = { workspace = true }
tokio      = { workspace = true }
# parish-inference is already in [dependencies]; no need to repeat it in dev-deps
