[package]
name = "parish-npc-tool"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "NPC world builder and inspection utility for Parish/Rundale (#433)"

[[bin]]
name = "parish-npc-tool"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
clap       = { workspace = true }
rand       = { workspace = true }
rusqlite   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
