[package]
name = "parish-persistence"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "SQLite save/load with WAL journal and branching saves for the Parish engine"

[dependencies]
parish-types = { workspace = true }
parish-world = { workspace = true }
parish-npc   = { workspace = true }
rusqlite     = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
tokio        = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
