[package]
name = "parish-server"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "Axum web server for Parish — serves the Svelte UI in a browser for testing"

[dependencies]
parish-core    = { workspace = true }
parish-palette = { workspace = true }
axum           = { version = "0.8", features = ["ws"] }
tokio          = { workspace = true }
tower-http     = { version = "0.6", features = ["fs", "cors", "set-header"] }
tower          = "0.5"
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
anyhow         = { workspace = true }
chrono         = { workspace = true }
dotenvy        = { workspace = true }
rand           = { workspace = true }
tokio-util     = { workspace = true }
uuid           = { version = "1", features = ["v4"] }
dashmap        = "6"
reqwest        = { workspace = true, features = ["json"] }
rusqlite       = { workspace = true }
jsonwebtoken   = { version = "10", features = ["rust_crypto"] }
hmac           = "0.12"
sha2           = "0.10"
hex            = "0.4"
base64         = "0.22"
governor       = { workspace = true }
lru            = { workspace = true }
tower-sessions = "0.15"

[dev-dependencies]
tempfile    = { workspace = true }
serial_test = { workspace = true }
wiremock    = { workspace = true }
