[package]
name = "parish-tauri"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "Tauri 2 desktop backend bridge for the Parish engine"

[lib]
name = "parish_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono      = { workspace = true }

[dependencies]
tauri          = { version = "2", features = [] }
png            = "0.17"
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
tokio-util     = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow         = { workspace = true }
chrono         = { workspace = true }
dotenvy        = { workspace = true }
parish-core    = { workspace = true }
parish-palette = { workspace = true }
rand           = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
gdk  = "0.18"
glib = "0.22"
