[package]
name = "parish-types"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "Foundational shared types for the Parish engine (zero internal deps)"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true, features = ["sync"] }
rand       = { workspace = true }
tracing    = { workspace = true }

