[package]
name = "parish-world"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "World graph, movement, weather, and environment state for the Parish engine"

[dependencies]
parish-types  = { workspace = true }
parish-config = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
chrono        = { workspace = true }
strsim        = { workspace = true }
rand          = { workspace = true }
tokio         = { workspace = true, features = ["sync"] }
toml          = { workspace = true }
